# Bezier-Subdivision

./: CMakeLists.txt  README.md
prebuild/: imgui.ini
prebuild/shaders/: vert.glsl
src/: CMakeLists.txt  bezier.hpp  circle.hpp  common.hpp  glad.c  line.hpp  main.cpp
src/shaders/: frag.glsl
